--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Music Mstream Server
+Description=Mstream: music server
 After=network.target
 
 [Service]
@@ -9,7 +9,7 @@ Group=__APP__
 Environment=NODE_PORT=__PORT__
 WorkingDirectory=__FINALPATH__/
 Environment="PATH=__ENV_PATH__"
-ExecStart=__YNH_NODE__ __FINALPATH__/cli-boot-wrapper.js -j __FINALPATH__/save/conf/default.json
+ExecStart=__FINALPATH__/mStream.AppImage -j __FINALPATH__/default.json
 Restart=on-failure
 
 [Install]
