--- a/conf/default.conf
+++ b/conf/default.conf
@@ -12,9 +12,9 @@
     "bootScanDelay": 15
   },
   "storage": {
-    "albumArtDirectory": "__DATADIR__/media/album-art",
-    "dbDirectory": "__DATADIR__/media/db",
-    "logsDirectory": "__DATADIR__/media/logs"
+    "albumArtDirectory": "__DATA_DIR__/media/album-art",
+    "dbDirectory": "__DATA_DIR__/media/db",
+    "logsDirectory": "__DATA_DIR__/media/logs"
   },
   "transcode": {
     "enabled": true,
