--- a/conf/config.json
+++ b/conf/config.json
@@ -12,9 +12,9 @@
     "bootScanDelay": 15
   },
   "storage": {
-    "albumArtDirectory": "__DATA_DIR__/media/album-art",
-    "dbDirectory": "__DATA_DIR__/media/db",
-    "logsDirectory": "__DATA_DIR__/media/logs"
+    "albumArtDirectory": "__DATA_DIR__/album-art",
+    "dbDirectory": "__DATA_DIR__db",
+    "logsDirectory": "__DATA_DIR__/logs"
   },
   "transcode": {
     "enabled": true,
