--- a/conf/config.json
+++ b/conf/config.json
@@ -1,6 +1,5 @@
 {
   "port": __PORT__,
-  "webAppDirectory": "public",
   "secret": "__KEY__",
   "writeLogs": true,
   "noUpload": false,
@@ -13,7 +12,7 @@
   },
   "storage": {
     "albumArtDirectory": "__DATA_DIR__/album-art",
-    "dbDirectory": "__DATA_DIR__db",
+    "dbDirectory": "__DATA_DIR__/db",
     "logsDirectory": "__DATA_DIR__/logs"
   },
   "transcode": {
