--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,7 +8,8 @@ User=__APP__
 Group=__APP__
 Environment=NODE_PORT=__PORT__
 WorkingDirectory=__INSTALL_DIR__/
-Environment="PATH=__ENV_PATH__"
+Environment="PATH=__PATH_WITH_NODEJS__"
+Environment="NODE_ENV=production"
 ExecStart=__NODEJS_DIR__/node __INSTALL_DIR__/cli-boot-wrapper.js -j __INSTALL_DIR__/config.json
 Restart=on-failure
 
